# El_eterno_dilema_del_lector

./: .gitignore  CMakeLists.txt  Constantes.h  Estructuras y Punteros.cpp  Estructuras y Punteros.h  Estructuras_y_Punteros.cpp  Estructuras_y_Punteros.h  Eterno_dilema  Manejo_de_archivos.cpp  Manejo_de_archivos.h  Menu.cpp  Menu.h  Validaciones.cpp  Validaciones.h  eterno_dilema  libros.csv  main.cpp  manejo_de_archivos.cpp  manejo_de_archivos.h  util.cpp  util.h
